--- a/VRChat/88/1281588.html
+++ b/VRChat/88/1281588.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SuAygQhWiMOeav+NsK7+RrexIHQRJUh2qOpUH3CeHas="></script>
+    "vfrgMVwMGTXQdB4fSpvvFAFvq3yY2xKQvQkHASntEXc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水を吐くフグ","description":"さては君たちが欲しいのは美少女ではなくフグだな？？？？\n\n【推奨シェーダー】\narktoon-shaders-1.0.1.1\n\n【規約】\n悪い事や自作発言以外ならだいたいOK\n\n【その他】\nVRCSDK入れた状態でインポートしてくださいその後シークエンス読み込むかプレハブをシーン上に配置で何とかなると思います","url":"https://booth.pm/ja/items/1281588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3ca21aad-ef64-40ed-bc49-61e52b07bbe1/i/1281588/c59978f7-928d-4e88-a442-dac6e27a38db_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SuAygQhWiMOeav+NsK7+RrexIHQRJUh2qOpUH3CeHas="></script>
+    nonce="vfrgMVwMGTXQdB4fSpvvFAFvq3yY2xKQvQkHASntEXc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1281588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1281588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
