--- a/VRChat/72/1276372.html
+++ b/VRChat/72/1276372.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "X9OdWVwB+sXLacWqDiffXENcLq+NZOF/8h0zZf0cMq0="></script>
+    "yYKtC6//ly3qGz8U2532olmma4+vQyNQaCW/GZmx1VY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"斧「Ykr-Arex」VRC向け　FBX＆Unity package","description":"本製品は、VRChat向け、fbx形式の3Dペンギンモデルです。\n\n▼当製品について\n本モデルは「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\n民間用モデルですが、軍事用として、改造も可能です。\n\nYkr社では、近代武器などを作成しておりましたが、古代より使われているAexを近代改修\n近代の有機物質テクノロジーにより、耐久性を上げさらには補強するためのパイプ等を接続しました\n\n▼製品内容\nreadme\nFBXファイル\nテクスチャファイル(ベースカラー、メタリック、ノーマルマップ等)\ntex1では模様有り　tex2では模様無し\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n\nURL:https://twitter.com/Yukki_WarVtuber\n\n","url":"https://booth.pm/ja/items/1276372","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1276372/cf33713b-84f6-45bb-9bb5-96428a0d50af_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="X9OdWVwB+sXLacWqDiffXENcLq+NZOF/8h0zZf0cMq0="></script>
+    nonce="yYKtC6//ly3qGz8U2532olmma4+vQyNQaCW/GZmx1VY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1276372/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1276372/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
